Some minor changes for code style and cleanup